# hlweb2

./: .dockerignore  .gitignore  InstallNotes.txt  README.md  WinCleanFiles.bat  zipbakcurdir.bat
hldjango/: Dockerfile  HlDjangoDb.sqlite3  HlHueyDb.sqlite3  HlHueyDb.sqlite3-shm  HlHueyDb.sqlite3-wal  autoGeneratedDocs.html  db.sqlite3  fly.toml  gettext1.bat  gettext2.bat  hueyconfig.py  hueymain.py  manage.py  output.pot  pyproject.toml  requirements.txt  runHueyConsumer.bat  testLocalServer.bat
hldjango/accounts/: admin.py  forms.py  models.py  urls.py  views.py
hldjango/accounts/migrations/: 0001_initial.py
hldjango/code/: casebooktools.py  manage.py  windowsManuallyRunManServiceTasks.bat  zipbakcurdir.bat
hldjango/code/accounts/: admin.py  forms.py  models.py  urls.py  views.py
hldjango/code/core/: models.py  urls.py  views.py
hldjango/code/dbbackup_ui/: urls.py  utils.py
hldjango/code/gadmin/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hldjango/code/games/: admin.py  apps.py  casebookwrapper.py  forms.py  gamefilemanager.py  gametasks.py  models.py  urls.py  views.py  views_api.py
hldjango/code/hldjango/: asgi.py  nginx_config.conf  nginx_configinc_cors.conf  nginx_configinc_proxy.conf  settings.py  urls.py  wsgi.py  wsgi_gunicorn_config_nginxhelper.py  wsgi_gunicorn_config_standalone.py
hldjango/core/: apps.py  urls.py  views.py
hldjango/core/templatetags/: jrtemplatetags.py
hldjango/docker/hlweb_myLocalFiles/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml  myLocalFilesNotes.txt
hldjango/docker/hlweb_personal/: Dockerfile  NOTES.txt  docker-compose.yml
hldjango/docker/hlweb_production_local/: 3_composeUpRun.bat  Dockerfile  docker-compose.yml
hldjango/docker/hlweb_standalone/: Dockerfile  (+3 more)
hldjango/games/: admin.py  apps.py  forms.py  gamefilemanager.py  models.py  urls.py  validators.py  views.py
hldjango/hldjango/: asgi.py  settings.py  settings_secret_defaultCopyThis.py  urls.py  wsgi.py
hldjango/install_scripts/: apt_install.sh  apt_install_nginx.sh  generate_ssl.sh  generate_ssl_certbot_running.sh  generate_ssl_certbot_standalone.sh  pip_install.sh  run_mainservices.sh  texlive.profile  texlive_install.sh
hldjango/media/: 1_copyDirectoriesToV3.bat  2_syncWithDeployFolder.bat
(+3279 files in other folders)
