[tool.poetry]
name = "hldjango"
version = "0.1.0"
description = "High and Low Web Services"
authors = ["jesse reichler <jessereichler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
black = "^24.3.0"
gunicorn = "^21.2.0"
poetry-plugin-export = "^1.7.1"
django-active-link = "^0.1.8"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
django-debug-toolbar = "^4.3.0"
pylatex = "^1.4.2"
pdflatex = "^0.1.3"
mistletoe = "^1.3.0"
graphviz = "^0.20.3"
huey = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
