[tool.poetry]
name = "hldjango"
version = "0.1.0"
description = "High and Low Web Services"
authors = ["jesse reichler <jessereichler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
black = "^24.3.0"
gunicorn = "^23.0.0"
poetry-plugin-export = "^1.7.1"
django-active-link = "^0.1.8"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
django-debug-toolbar = "^5.0.1"
pylatex = "^1.4.2"
mistletoe = "^1.3.0"
graphviz = "^0.20.3"
huey = "^2.5.0"
django-allauth = {extras = ["socialaccount"], version = "^0.62.1"}
django-configurations = "^2.5.1"
django-ace = "^1.37.5"
pydot = "^3.0.4"
django-extensions = "^3.2.3"
waitress = "^3.0.0"
paste = "^3.10.1"
whitenoise = "^6.7.0"
djangorestframework = "^3.15.2"
lark = {extras = ["regex"], version = "^1.2.2"}
verbose-csrf-middleware = "^1.0.4"
pdf2image = "^1.17.0"
crispy-bootstrap4 = "^2024.10"
django-ipware = "^7.0.1"
pycipher = "^0.5.2"
django-sendgrid-v5 = "^1.2.4"
django-dbbackup = "^4.3.0"
redis = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
